Home page carousel was added

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,21 @@
 .header-main {
-    margin-top: 100px;
+    margin-top: 90px;
 }
 
 .intro {
     background-image: url(../images/mugs1.jpg);
     background-size: cover;
+    background-position: top;
+    height: 90vh;
+}
+
+.logo-centered {
+    text-align: center;
+}
+
+.navbar-brand {
+    margin-right: 0;
+    font-size: 1.5rem;
 }
 
 .header-m-left {
@@ -12,5 +23,30 @@
 }
 
 .header-m-left a:not(:last-child) {
-    margin-right: 10px;
+    margin-right: 20px;
 }
+.col-auto {
+    position: relative;
+}
+.search-menu {
+    position:absolute;
+    top:100%;
+    left: auto;
+    right:0;
+    z-index:1100;
+    display:none;
+    float:right;
+    text-align:right;
+    background-color:#fff;
+}
+
+.owl-carousel {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+
+
+
+
+
