--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,11 @@
 .header-m-left a:not(:last-child) {
     margin-right: 20px;
 }
+
 .col-auto {
     position: relative;
 }
+
 .search-menu {
     position:absolute;
     top:100%;
@@ -40,9 +42,18 @@
     background-color:#fff;
 }
 
+.form-control {
+    height: calc(1.5em + 1.5rem + 4px);
+}
+
 .owl-carousel {
     margin-top: 60px;
     margin-bottom: 60px;
+}
+
+.card-product .img-wrap {
+    height: 300px;
+    border-radius: 0;
 }
 
 
