Cat page was added

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,18 @@
     margin-top: 90px;
 }
 
+.cart-m-top {
+    margin-top: 75px;
+}
+
+.table td {
+    padding: 0.6rem;
+}
+
+.breadcrumb {
+    margin-left: 80px;
+}
+
 
 
 
